--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "chord.pin",
   "version": "0.0.1",
   "description": "Chord building app.",
@@ -9,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "tone": "^13.8.25",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
