--- a/package.json
+++ b/package.json
@@ -3,17 +3,34 @@
   "name": "chord.pin",
   "version": "0.0.1",
   "description": "Chord building app.",
-  "main": "index.html",
+  "main": "./build/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx webpack-dev-server --content-base src",
+    "build": "npx webpack --unhandled-rejections=strict"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "copy-webpack-plugin": "^6.0.1",
+    "file-loader": "^6.0.0",
+    "path": "^0.12.7",
     "tone": "^13.8.25",
-    "typescript": "^3.9.3"
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
+    "css-loader": "^3.4.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
-    "webpack": "^4.43.0"
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
