--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,8 @@
 {
     "compilerOptions": {
-        "lib": ["es5", "es6"],
-        "outFile": "App.js",
-        "sourceMap": true,
-        "module": "system"
-    },
-    "include": [
-        "src/./*.ts", "src/ts/audio.ts", "src/ts/app.ts", "src/ts/prompt.ts", "src/ts/definitions.ts"
-    ]
+        "lib": ["es5", "es6", "dom"],
+        "module": "commonjs",
+        "target": "es6",
+        "removeComments": true,
+    }
 }
