--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
 			"group": "build",
 			"problemMatcher": [],
 			"label": "npm: build",
-			"detail": "npx webpack --unhandled-rejections=strict"
+			"detail": "npx webpack"
 		}
 	]
 }
