--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "tone": "^13.8.25",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.42.0",
