--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "version": "0.0.1",
   "description": "Chord building app.",
   "main": "./build/index",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+  "scripts": {  
+    "test": "jest",
     "start": "npx webpack-dev-server --content-base src",
     "build": "npx webpack --unhandled-rejections=strict"
   },
-  "author": "",
+  "author": "JacekWozniak12",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^26.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
+    "jest": "^26.0.1",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "tone": "^13.8.25",
+    "ts-jest": "^26.1.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.42.0",
