--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
-    "compilerOptions": {     
-        "lib": ["dom", "es6"],
+    "compilerOptions": {
+        "lib": [
+            "dom",
+            "es6"
+        ],
         "module": "commonjs",
         "target": "es6",
         "removeComments": true,
@@ -8,13 +11,29 @@
         "baseUrl": "./",
         "noImplicitAny": false,
         "paths": {
-            "Tone": ["node_modules/tone/*"],
-          },
+            "Tone": [
+                "node_modules/tone/*"
+            ],
+        },
         "experimentalDecorators": true,
         "downlevelIteration": true
     },
-    "include":[
+    "include": [
         "node_modules/tone/*",
-        "src/ts/*", "src/ts/definitions/Note.ts", "src/ts/definitions/chord.ts", "src/ts/definitions/DisplayableChord.ts", "src/ts/definitions/DisplayableNote.ts", "src/ts/definitions/NoteSet.ts", "src/ts/definitions/Options.ts", "src/ts/definitions/Const.ts", "src/ts/definitions/Tuning.ts", "src/ts/definitions/VariableNotifier.ts", "src/ts/gui/NoteDisplay.ts", "src/ts/definitions/observer.ts, "src/ts/gui/GuitarString.ts"", ", "src/ts/gui/Fretboard.ts"src/ts/gui/SettingsDisplay.ts", 
+        "src/ts/*",
+        "src/ts/definitions/Note.ts",
+        "src/ts/definitions/chord.ts",
+        "src/ts/definitions/DisplayableChord.ts",
+        "src/ts/definitions/NotePosition.ts",
+        "src/ts/definitions/NoteSet.ts",
+        "src/ts/definitions/Options.ts",
+        "src/ts/definitions/Const.ts",
+        "src/ts/definitions/Tuning.ts",
+        "src/ts/definitions/VariableNotifier.ts",
+        "src/ts/gui/NoteDisplay.ts",
+        "src/ts/definitions/observer.ts",
+        "src/ts/gui/GuitarString.ts",
+        "src/ts/gui/Fretboard.ts",
+        "src/ts/gui/SettingsDisplay.ts",
     ]
 }
