--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,19 +21,19 @@
     "include": [
         "node_modules/tone/*",
         "src/ts/*",
-        "src/ts/definitions/Note.ts",
-        "src/ts/definitions/chord.ts",
-        "src/ts/definitions/DisplayableChord.ts",
-        "src/ts/definitions/NotePosition.ts",
-        "src/ts/definitions/NoteSet.ts",
-        "src/ts/definitions/Options.ts",
-        "src/ts/definitions/Const.ts",
-        "src/ts/definitions/Tuning.ts",
-        "src/ts/definitions/VariableNotifier.ts",
+        "src/ts/Definitions/Note.ts",
+        "src/ts/Definitions/chord.ts",
+        "src/ts/Definitions/DisplayableChord.ts",
+        "src/ts/Definitions/NotePosition.ts",
+        "src/ts/Definitions/NoteSet.ts",
+        "src/ts/Definitions/Options.ts",
+        "src/ts/Definitions/Const.ts",
+        "src/ts/Definitions/Tuning.ts",
+        "src/ts/Definitions/VariableNotifier.ts",
         "src/ts/gui/NoteDisplay.ts",
-        "src/ts/definitions/observer.ts",
+        "src/ts/Definitions/observer.ts",
         "src/ts/gui/GuitarString.ts",
         "src/ts/gui/Fretboard.ts",
-        "src/ts/gui/SettingsDisplay.ts",
+        "src/ts/gui/SettingsDisplay.ts", "src/ts/definitions/GuitarStringNote.ts", "src/ts/gui/GUI.ts", "src/ts/parts/Parser.ts",
     ]
 }
