--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,12 @@
         "src/ts/Definitions/Const.ts",
         "src/ts/Definitions/Tuning.ts",
         "src/ts/Definitions/VariableNotifier.ts",
-        "src/ts/gui/NoteDisplay.ts",
         "src/ts/Definitions/observer.ts",
         "src/ts/gui/GuitarString.ts",
         "src/ts/gui/Fretboard.ts",
-        "src/ts/gui/SettingsDisplay.ts", "src/ts/gui/GuitarStringNote.ts", "src/ts/gui/GUI.ts", "src/ts/parts/Parser.ts",
+        "src/ts/gui/SettingsDisplay.ts", 
+        "src/ts/gui/GuitarStringNote.ts", 
+        "src/ts/gui/GUI.ts", 
+        "src/ts/parts/Parser.ts",
     ]
 }
