--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,16 +21,16 @@
     "include": [
         "node_modules/tone/*",
         "src/ts/*",
-        "src/ts/Definitions/Note.ts",
-        "src/ts/Definitions/chord.ts",
-        "src/ts/Definitions/DisplayableChord.ts",
-        "src/ts/Definitions/NotePosition.ts",
-        "src/ts/Definitions/NoteSet.ts",
-        "src/ts/Definitions/Options.ts",
-        "src/ts/Definitions/Const.ts",
-        "src/ts/Definitions/Tuning.ts",
-        "src/ts/Definitions/VariableNotifier.ts",
-        "src/ts/Definitions/observer.ts",
+        "src/ts/definitions/Note.ts",
+        "src/ts/definitions/Chord.ts",
+        "src/ts/definitions/DisplayableChord.ts",
+        "src/ts/definitions/NotePosition.ts",
+        "src/ts/definitions/NoteSet.ts",
+        "src/ts/definitions/Options.ts",
+        "src/ts/definitions/Const.ts",
+        "src/ts/definitions/Tuning.ts",
+        "src/ts/definitions/VariableNotifier.ts",
+        "src/ts/definitions/Observer.ts",
         "src/ts/gui/GuitarString.ts",
         "src/ts/gui/Fretboard.ts",
         "src/ts/gui/SettingsDisplay.ts", 
